--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,6 @@ ul.posts li {
 {
     position: relative;
     top: -150px;
-    color: #860101;
+    color: #0b1ae3;
     text-shadow: white 0px 0px 10px;
 }
