--- a/css/main.css
+++ b/css/main.css
@@ -1,53 +1,16 @@
-body {
-    margin: 60px auto;
-    width: 70%;
-}
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-}
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a {
-    text-decoration: none;
-    color: #999;
-}
-a:hover {
-    text-decoration: underline;
-}
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-}
-
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-
-ul.posts li {
-    list-style: none;
-}
-.shadow {
-    text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
-}
-#overlay 
+p
 {
-    position: relative;
-    top: -150px;
-    color: #0b1ae3;
-    text-shadow: white 0px 0px 10px;
+  font-family: cursive;
+  font-size: large;
+  color: #0000ff;
+  background-color: #ffff00;
+}
+h1
+{
+  font-family: "Times New Roman",Georgia,serif;
+  font-size: 40px;
+  text-align: center;
+  text-decoration: underline;
+  color: #ff0000;
+  background-color: #00ffff;
 }
