--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ p
   font-family: cursive;
   font-size: large;
   color: #0000ff;
-  background-color: #ffff00;
+  background-color: #7900fa;
 }
 h1
 {
