--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,3 @@
-p
-{
-  font-family: cursive;
-  font-size: large;
-  color: #0000ff;
-  background-color: #7900fa;
-}
 h1
 {
   font-family: "Times New Roman",Georgia,serif;
@@ -14,4 +7,14 @@ h1
   color: #ff0000;
   background-color: #00ffff;
 }
+p
+{
+  font-family: cursive;
+  font-size: large;
+  color: #0000ff;
+  background-color: #7900fa;
+  padding: 30px;
+}
+#background{
  background-image: url("czaplicki-j.github.io/90s");
+}
