--- a/css/main.css
+++ b/css/main.css
@@ -16,5 +16,5 @@ p
   padding: 30px;
 }
 #background{
- background-image: url("czaplicki-j.github.io/90s");
+ background: url("czaplicki-j.github.io/90s");
 }
