--- a/css/main.css
+++ b/css/main.css
@@ -18,3 +18,6 @@ p
 #background{
  background: url("czaplicki-j.github.io/90s");
 }
+.shadow {
+  text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
+}
