--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ p
   padding: 30px;
 }
 #background{
- background: url("czaplicki-j.github.io/90s");
+ background-image: url("czaplicki-j.github.io/90s");
 }
 .shadow {
   text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
