--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ p
   background-color: #7900fa;
   padding: 30px;
 }
-.background {
+#background {
  background-image: url("https://czaplicki-j.github.io/90s.jpg");
 }
  
