--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 h1
 {
-  font-family: "Times New Roman",Georgia,serif;
+  font-family: cursive;
   font-size: 40px;
   text-align: center;
   text-decoration: underline;
