--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ p
   padding: 30px;
 }
 #background {
- background-image: url("https://czaplicki-j.github.io/90s.jpg");
+ background: url("https://czaplicki-j.github.io/90s.jpg");
 }
  
 .shadow {
