--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ p
   font-family: cursive;
   font-size: large;
   color: #0000ff;
-  background-color: #7900fa;
+  background-color: rgba(121,0,250,.5);
   padding: 30px;
 }
 #background {
