--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 h1
 {
-  font-family: cursive;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
   font-size: 40px;
   text-align: center;
   text-decoration: underline;
@@ -9,7 +9,7 @@ h1
 }
 p
 {
-  font-family: cursive;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
   font-size: large;
   color: #0000ff;
   background-color: rgba(121,0,250,.7);
