--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,24 @@
 h1
 {
-  font-family: "Comic Sans MS", "Comic Sans";
+  font-family: "Times New Roman", Times, serif;
   font-size: 40px;
   text-align: center;
-  text-decoration: underline;
-  color: #ff0000;
-  background-color: #00ffff;
+  color: rgb(209, 10, 123);
+  background-color: rgb(8, 196, 20,.7);
 }
 p
 {
-  font-family: "Comic Sans MS", "Comic Sans";
+  font-family: "Times New Roman", Times, serif;
   font-size: 50px;
   color: #f2ff00;
   background-color: rgba(121,0,250,.7);
   padding: 15px;
 }
+/*
 #background {
  background: url("https://czaplicki-j.github.io/90s.jpg");
 }
+*/
  
 .shadow {
   text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
