--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,10 @@ p
   font-family: "Times New Roman", Times, serif;
   font-size: 50px;
   color: #f2ff00;
+  /*
   background-color: rgba(121,0,250,.7);
   padding: 15px;
+  */
 }
 /*
 #background {
