--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ p
 {
   font-family: "Times New Roman", Times, serif;
   font-size: 50px;
-  color: #f2ff00;
+  color: rgb(0,0,0);
   /*
   background-color: rgba(121,0,250,.7);
   padding: 15px;
