--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,6 @@ text-align: center;
     text-align: center;
     color: black;
 }
-#headerBack{
+.headerBack{
     background-image: url("headerBackground.jpg") 
 }
