--- a/css/main.css
+++ b/css/main.css
@@ -39,5 +39,5 @@ text-align: center;
     color: black;
 }
 .headerBack{
-    background-image: url("headerBackground.jpg") 
+    background: url("https://czaplicki-j.github.io/headerBackground.jpg") 
 }
