--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -1,6 +1,6 @@
 /* Dropdown Button */
 .dropbtn {
-    background-color: red;
+    background-color: black;
     color: white;
     padding: 16px;
     font-size: 16px;
