--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -1,6 +1,6 @@
 /* Dropdown Button */
 .dropbtn {
-    background-color: black;
+    background-color: red;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -32,10 +32,10 @@
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
+  .dropdown-content a:hover {background-color: red;}
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {display: block;}
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: red;}
+  .dropdown:hover .dropbtn {background-color: white;}
