--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -10,6 +10,7 @@
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
     position: relative;
+    right: -93%;
     display: inline-block;
   }
   
@@ -38,4 +39,4 @@
   .dropdown:hover .dropdown-content {display: block;}
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: rgb(110, 109, 106,.8);}
+  .dropdown:hover .dropbtn {background-color: rgb(110, 109, 106,.7);}
