--- a/css/main.css
+++ b/css/main.css
@@ -28,9 +28,12 @@ text-align: center;
  
 
 #vertical {
-     white-space: nowrap;
+    position: relative;
+   height: 750px;
+    width: 25px;
+    left: -8px;
+     white-space: normal;
     text-overflow: clip;
-    height: 98%;
     color: rgb(255,255,255);
     background-color: red;
     writing-mode: vertical-lr;
