--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,10 @@ h3{
 }
 p
 {
+  font-family: 'Vast Shadow', cursive;
+  /*
 font-family: "Georgia", Times, serif;
+  */
 font-size: 25px;
 color: rgb(0,0,0);
 text-align: center;
