--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,21 @@
 h1
 {
-  font-family: "Times New Roman", Times, serif;
+font-family: 'Vast Shadow', cursive;
   font-size: 30px;
   text-align: center;
   color: rgb(209, 10, 123);
 }
 h2{
-    font-family: "Times New Roman", Times, serif;
+font-family: 'Vast Shadow', cursive;
     text-align: center;
 }
 h3{
-    font-family: "Times New Roman", Times, serif;
+font-family: 'Vast Shadow', cursive;
     text-align: center;
 }
 p
 {
   font-family: 'Vast Shadow', cursive;
-  /*
-font-family: "Georgia", Times, serif;
-  */
 font-size: 25px;
 color: rgb(0,0,0);
 text-align: center;
@@ -31,6 +28,7 @@ text-align: center;
  
 
 #vertical {
+  font-family: 'Vast Shadow', cursive;
     position: relative;
     width: 25px;
     left: -8px;
@@ -42,6 +40,11 @@ text-align: center;
     float: left;
     font-size: 25px;
     padding: 1px;
+  -moz-transform: scale(1, -1);
+-webkit-transform: scale(1, -1);
+-o-transform: scale(1, -1);
+-ms-transform: scale(1, -1);
+transform: scale(1, -1);
 }
 #numbers {
     font-size: 20px;
