--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 h1
 {
-font-family: 'Vast Shadow', cursive;
+font-family: 'Times New Roman', sans serif;
   font-size: 30px;
   text-align: center;
   color: rgb(209, 10, 123);
@@ -40,11 +40,11 @@ text-align: center;
     float: left;
     font-size: 25px;
     padding: 1px;
-  -moz-transform: scale(1, -1);
--webkit-transform: scale(1, -1);
--o-transform: scale(1, -1);
--ms-transform: scale(1, -1);
-transform: scale(1, -1);
+  -moz-transform: scale(-1, 1);
+-webkit-transform: scale(-1, 1);
+-o-transform: scale(-1, 1);
+-ms-transform: scale(-1, 1);
+transform: scale(-1, 1);
 }
 #numbers {
     font-size: 20px;
