--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,11 @@ text-align: center;
 -o-transform: scale(-1, 1);
 -ms-transform: scale(-1, 1);
 transform: scale(-1, 1);
+  -moz-transform: scale(1, -1);
+-webkit-transform: scale(1, -1);
+-o-transform: scale(1, -1);
+-ms-transform: scale(1, -1);
+transform: scale(1, -1);
 }
 #numbers {
     font-size: 20px;
