--- a/css/main.css
+++ b/css/main.css
@@ -39,16 +39,10 @@ text-align: center;
     float: left;
     font-size: 25px;
     padding: 1px;
-  -moz-transform: scale(-1, 1);
--webkit-transform: scale(-1, 1);
--o-transform: scale(-1, 1);
--ms-transform: scale(-1, 1);
-transform: scale(-1, 1);
-  -moz-transform: scale(1, -1);
--webkit-transform: scale(1, -1);
--o-transform: scale(1, -1);
--ms-transform: scale(1, -1);
-transform: scale(1, -1);
+ -webkit-transform:rotate(-180deg);
+-moz-transform:rotate(-180deg);
+-o-transform:rotate(-180deg);
+transform:rotate(-180deg);
 }
 #numbers {
     font-size: 20px;
