--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,9 @@ transform:rotate(-180deg);
 #dash{
    text-align: center;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
