--- a/css/page2font.css
+++ b/css/page2font.css
@@ -1,5 +1,22 @@
+h1
+{
+font-family: 'Times New Roman', sans serif;
+  font-size: 30px;
+  text-align: center;
+  color: rgb(209, 10, 123);
+}
+h2{
+font-family: 'Vast Shadow', cursive;
+    text-align: center;
+}
+h3{
+font-family: 'Vast Shadow', cursive;
+    text-align: center;
+}
 p
 {
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;
+  font-family: 'Open Sans', sans-serif;
+font-size: 25px;
+color: rgb(0,0,0);
+text-align: center;
 }
