--- a/css/page2.css
+++ b/css/page2.css
@@ -16,7 +16,7 @@ font-family: 'Vast Shadow', cursive;
 }
 p
 {
-  font-family: 'Open Sans', open-sans;
+  font-family: 'Archivo Narrow', sans-serif;
 font-size: 25px;
 color: rgb(0,0,0);
 text-align: center;
