--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ text-align: center;
 
 #background {
  background: url("https://czaplicki-j.github.io/PowerBallLogo2.png");
-} 
+}
 
 #vertical {
     position: relative;
@@ -56,8 +56,11 @@ transform:rotate(-180deg);
    text-align: center;
 }
 .center {
+  /*
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  */
+  width: 100%;
+  height: auto;
 }
