--- a/css/page2.css
+++ b/css/page2.css
@@ -75,10 +75,13 @@ transform:rotate(-180deg);
 .frac > span {
   display: block;
   padding: 0.1em;
+  text-align: center;
 }
 .frac span.bottom {
   border-top: thin solid black;
+  text-align: center;
 }
 .frac span.symbol {
   display: none;
+  text-align: center;
 }
