--- a/css/page2.css
+++ b/css/page2.css
@@ -85,16 +85,15 @@ transform:rotate(-180deg);
 }
 */
 
-.fraction, .top, .bottom {
-  padding: 0 5px;    
-}
-
-.fraction {
+span.frac {
   display: inline-block;
-  text-align: center;    
+  text-align: center;
+  vertical-align: middle;
 }
-
-.bottom{
-  border-top: 1px solid #000;
+span.frac > sup, span.frac > sub {
   display: block;
+  font: inherit;
+  padding: 0 0.3em;
 }
+span.frac > sup {border-bottom: 0.08em solid;}
+span.frac > span {display: none;}
