--- a/css/main.css
+++ b/css/main.css
@@ -6,16 +6,16 @@ font-family: 'Times New Roman', sans serif;
   color: rgb(209, 10, 123);
 }
 h2{
-font-family: 'Vast Shadow', cursive;
+font-family: 'Vast Shadow', sans serif;
     text-align: center;
 }
 h3{
-font-family: 'Vast Shadow', cursive;
+font-family: 'Vast Shadow', sans serif;
     text-align: center;
 }
 p
 {
-  font-family: 'Vast Shadow', cursive;
+  font-family: 'Vast Shadow', sans serif;
 font-size: 25px;
 color: rgb(0,0,0);
 text-align: center;
@@ -24,7 +24,7 @@ text-align: center;
 #background {
  background: url("https://czaplicki-j.github.io/PowerBallLogo2.png");
 }
- 
+
 #vertical {
     position: relative;
     width: 25px;
@@ -43,6 +43,7 @@ text-align: center;
 transform:rotate(-180deg);
 }
 #numbers {
+  font-family: 'Vast Shadow', sans serif;
     font-size: 20px;
     text-align: center;
     color: rgb(209, 10, 123);
