--- a/css/page2.css
+++ b/css/page2.css
@@ -14,8 +14,7 @@ h3{
 font-family: 'Vast Shadow', cursive;
     text-align: center;
 }
-p
-{
+p{
 font-family: 'Archivo Narrow', sans-serif;
 font-size: 30px;
 color: rgb(0,0,0);
