--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ text-align: center;
 transform:rotate(-180deg);
 }
 #numbers {
-  font-family: 'Archivo Narrow', sans-serif;
+  font-family: 'Vast Shadow', sans serif;
     font-size: 20px;
     text-align: center;
     color: rgb(209, 10, 123);
