--- a/css/page3.css
+++ b/css/page3.css
@@ -7,11 +7,11 @@ font-family: 'Vast Shadow', cursive;
 }
 h2{
 font-family: 'Times New Roman', sans serif;
-    text-align: left;
+    text-align: center;
 }
 p{
 font-family: 'Archivo Narrow', sans-serif;
-font-size: 30px;
+font-size: 20px;
 color: rgb(0,0,0);
 text-align: left;
 }
