--- a/css/page3.css
+++ b/css/page3.css
@@ -3,7 +3,7 @@ h1
 font-family: 'Vast Shadow', cursive;
   font-size: 30px;
   text-align: center;
-  color: rgb(70, 19, 117);
+  color: rgb(255,255,255);
 }
 h2{
 font-family: 'Times New Roman', sans serif;
@@ -11,7 +11,7 @@ font-family: 'Times New Roman', sans serif;
 }
 p{
 font-family: 'Archivo Narrow', sans-serif;
-font-size: 20px;
+font-size: 27px;
 color: rgb(0,0,0);
 text-align: left;
 }
