--- a/css/page2.css
+++ b/css/page2.css
@@ -43,6 +43,7 @@ text-align: center;
 transform:rotate(-180deg);
 }
 #numbers {
+  font-family: 'Vast Shadow', cursive;
     font-size: 20px;
     text-align: center;
     color: rgb(209, 10, 123);
