--- a/css/page3.css
+++ b/css/page3.css
@@ -6,8 +6,10 @@ font-family: 'Vast Shadow', cursive;
   color: rgb(0,0,0);
 }
 h2{
-font-family: 'Times New Roman', sans serif;
+font-family: 'Vast Shadow', cursive;
+    font-size: 20 px;
     text-align: center;
+    color: black;
 }
 p{
 font-family: 'Archivo Narrow', sans-serif;
