--- a/css/page3.css
+++ b/css/page3.css
@@ -9,7 +9,7 @@ h2{
 font-family: 'Vast Shadow', cursive;
     font-size: 20 px;
     text-align: center;
-    color: black;
+    color: red;
 }
 p{
 font-family: 'Archivo Narrow', sans-serif;
