--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ text-align: center;
 }
 
 #background {
- background: url("https://czaplicki-j.github.io/PowerBallLogo2.png");
+ background: url("/pictures/NYlogo.png");
 }
 
 #vertical {
