--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ text-align: center;
 }
 
 #background {
- background: url("/pictures/NYlogo.png");
+ background-image: url("/pictures/NYlogo.png");
 }
 
 #vertical {
