--- a/css/page2.css
+++ b/css/page2.css
@@ -66,7 +66,7 @@ transform:rotate(-180deg);
   display: block;
   margin-left: auto;
   margin-left: auto;
-  width: auto;
+  width: 80%;
   height: auto;
 }
 
