--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 h1
 {
-font-family: 'Times New Roman', sans serif;
+font-family: 'Vast Shadow', sans serif;
   font-size: 30px;
   text-align: center;
     color: rgb(70, 19, 117);
