--- a/css/main.css
+++ b/css/main.css
@@ -16,9 +16,9 @@ font-family: 'Vast Shadow', sans serif;
 p
 {
   font-family: 'Vast Shadow', sans serif;
-font-size: 25px;
+font-size: 15px;
 color: rgb(0,0,0);
-text-align: center;
+text-align: left;
 }
 
 #background {
