--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ p
   font-family: 'Vast Shadow', sans serif;
 font-size: 15px;
 color: rgb(0,0,0);
-text-align: left;
+text-align: center;
 }
 
 #background {
