--- a/css/page2.css
+++ b/css/page2.css
@@ -56,6 +56,9 @@ transform:rotate(-180deg);
    text-align: center;
 }
 #left{
+  font-family: 'Archivo Narrow', sans-serif;
+  font-size: 30px;
+  color: rgb(0,0,0);
   text-align: left;
 }
 .center {
